# variegated-board-cfg

./: .gitignore  LICENSE.md  README.md
tests/: Cargo.toml  board-cfg.toml  rust-toolchain.toml
tests/src/: lib.rs  peripherals.rs
variegated-board-cfg/: Cargo.toml
variegated-board-cfg/src/: lib.rs
